--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,21 @@
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body, html, #root {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  font-family: 'PT Sans', sans-serif;
+  background: url('./images/background.png') no-repeat center center fixed;
+  background-size: cover;
+
+  @media (max-width: 768px) {
+    background: url('./images/background-sm.png') no-repeat center center fixed;
+    background-size: cover;
+  }
 }
